update logic
