# public/swagger.json
@@ -1421,6 +1421,38 @@
         }
       }
     },
+    "/api/apply/count": {
+      "post": {
+        "tags": [
+          "Apply"
+        ],
+        "description": "Get apply count",
+        "parameters": [
+          {
+            "name": "applySelect",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success result",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Apply"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/apply/status/{id}": {
       "post": {
         "tags": [
